<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/translucent"
    android:padding="@dimen/margin_xlarge"
    tools:context=".ui.MyPageActivity">

    <TextView
        android:id="@+id/myPageTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_middle"
        android:text="@string/app_title2"
        android:textColor="@color/colorTextTitlePortal"
        android:textSize="@dimen/title_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_middle"
        android:text="@string/text_name_title"
        android:textColor="@color/colorTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPageTitleTextView" />

    <LinearLayout
        android:id="@+id/confirmButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_middle"
        android:background="@drawable/button_state"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_middle"
        android:paddingBottom="@dimen/margin_middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView">

        <TextView
            android:id="@+id/contractButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/login__insurance"
            android:gravity="center"
            android:text="@string/text_confirm_contract"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_middle"
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/msg_conf_contract"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

    <Button
        android:id="@+id/inCaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_middle"
        android:background="@drawable/button_state"
        android:drawableStart="@drawable/login_if"
        android:paddingTop="@dimen/margin_large"
        android:paddingBottom="@dimen/margin_large"
        android:text="@string/text_in_case"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmButtonLayout" />

    <Button
        android:id="@+id/importantContactButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/margin_middle"
        android:background="@drawable/button_state"
        android:drawableStart="@drawable/login_info"
        android:text="@string/text_important_contact"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inCaseButton" />

    <Button
        android:id="@+id/contactSettingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_middle"
        android:background="@drawable/button_state"
        android:drawableStart="@drawable/login_setting"
        android:text="@string/text_contact_setting"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importantContactButton" />

    <Button
        android:id="@+id/emergencyContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/login_emergency"
        android:text="@string/text_emergency_contact"
        android:textColor="@color/colorTextEmergency"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>