<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_large"
            android:gravity="center"
            android:text="@string/msg_add_contract"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_middle"
            android:layout_marginTop="@dimen/margin_middle"
            android:contentDescription="@string/text_none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextView"
            app:srcCompat="@drawable/add_image" />

        <TextView
            android:id="@+id/addContractTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_middle"
            android:layout_marginEnd="@dimen/margin_middle"
            android:drawableTop="@drawable/add"
            android:gravity="center"
            android:padding="@dimen/margin_middle"
            android:text="@string/menu_add_contract"
            android:textColor="@color/colorTextBase"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addCardTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/addCardTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_middle"
            android:layout_marginEnd="@dimen/margin_middle"
            android:drawableTop="@drawable/add"
            android:gravity="center"
            android:padding="@dimen/margin_middle"
            android:text="@string/text_add_card"
            android:textColor="@color/colorTextBase"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/addWarrantyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_middle"
            android:layout_marginEnd="@dimen/margin_middle"
            android:drawableTop="@drawable/add"
            android:gravity="center"
            android:padding="@dimen/margin_middle"
            android:text="@string/text_add_warranty"
            android:textColor="@color/colorTextBase"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addCardTextView"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_middle"
            android:layout_marginEnd="@dimen/margin_middle"
            android:layout_marginBottom="@dimen/margin_middle"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3">


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>